<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.kiddoshine.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_list_anak"
        android:name="com.example.kiddoshine.ui.ListAnak.ListAnakFragment"
        android:label="@string/title_list_anak"
        tools:layout="@layout/fragment_list_anak" />

    <fragment
        android:id="@+id/navigation_artikel"
        android:name="com.example.kiddoshine.ui.artikel.ArtikelFragment"
        android:label="@string/title_artikel"
        tools:layout="@layout/fragment_artikel" />

    <fragment
        android:id="@+id/navigation_marketplace"
        android:name="com.example.kiddoshine.ui.marketplace.MarketplaceFragment"
        android:label="@string/title_marketplace"
        tools:layout="@layout/fragment_marketplace" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.kiddoshine.ui.settings.SettingsFragment"
        android:label="fragment_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>